src/xdrfile.h

  /*! \brief Abstract datatype for an portable binary file handle
   *
   *  This datatype essentially works just like the standard FILE type in C.
   *  The actual contents is hidden in the implementation, so you can only
   *  define pointers to it, for use with the xdrfile routines.
   *
   *  If you \a really need to see the definition it is in xdrfile.c, but you
   *  cannot access elements of the structure outside that file.
   *
   *  \warning The implementation is completely different from the C standard
   *  library FILE, so don't even think about using an XDRFILE pointer as an
   *  argument to a routine that needs a standard FILE pointer.
   */
  typedef struct XDRFILE XDRFILE;
  enum { exdrOK, exdrHEADER, exdrSTRING, exdrDOUBLE,
       exdrINT, exdrFLOAT, exdrUINT, exdr3DX, exdrCLOSE, exdrMAGIC,
       exdrNOMEM, exdrENDOFFILE, exdrFILENOTFOUND, exdrNR };
  extern char *exdr_message[exdrNR];
  /*! \brief Read one or more \a integer type variable(s)
   *
   *  \param ptr    Pointer to memory where data should be written
   *  \param ndata  Number of integers to read
   *  \param xfp    Handle to portable binary file, created with xdrfile_open()
   *
   *  \return       Number of integers read
   *
   *  The integer data type is assumed to be less than or equal to 32 bits.
   *
   *  We do not provide any routines for reading/writing 64-bit integers, since
   *  - Not all XDR implementations support it
   *  - Not all machines have 64-bit integers
   *
   *  Split your 64-bit data into two 32-bit integers for portability!
   */
  int
  xdrfile_read_int(int *         ptr,
           int           ndata,
           XDRFILE *     xfp);
  /*! \brief Read one or more \a float type variable(s)
   *
   *  \param ptr    Pointer to memory where data should be written
   *  \param ndata  Number of floats to read
   *  \param xfp    Handle to portable binary file, created with xdrfile_open()
   *
   *  \return       Number of floats read
   */
  int
  xdrfile_read_float(float *           ptr,
             int               ndata,
             XDRFILE *         xfp);
  /*! \brief Read one or more \a double type variable(s)
   *
   *  \param ptr    Pointer to memory where data should be written
   *  \param ndata  Number of doubles to read
   *  \param xfp    Handle to portable binary file, created with xdrfile_open()
   *
   *  \return       Number of doubles read
   */
  int
  xdrfile_read_double(double *          ptr,
            int               ndata,
            XDRFILE *         xfp);
  /*! \brief Read a string (array of characters)
   *
   *  \param ptr     Pointer to memory where data should be written
   *  \param maxlen  Maximum length of string. If no end-of-string is encountered,
   *                 one byte less than this is read and end-of-string appended.
   *  \param xfp     Handle to portable binary file, created with xdrfile_open()
   *
   *  \return        Number of characters read, including end-of-string
   */
  int
  xdrfile_read_string(char *          ptr,
            int             maxlen,
            XDRFILE *       xfp);
  /*! \brief Write a string (array of characters)
   *
   *  \param ptr     Pointer to memory where data should be read
   *  \param xfp     Handle to portable binary file, created with xdrfile_open()
   *
   *  \return        Number of characters written, including end-of-string
   */
  int
  xdrfile_write_string(char *          ptr,
             XDRFILE *       xfp);
  /*! \brief Compress coordiates in a float array to XDR file
   *
   *  This routine will perform \a lossy compression on the three-dimensional
   *  coordinate data data specified and store it in the XDR file.
   *
   *  The lossy part of the compression consists of multiplying each
   *  coordinate with the precision argument and then rounding to integers.
   *  We suggest a default value of 1000.0, which means you are guaranteed
   *  three decimals of accuracy. The only limitation is that scaled coordinates
   *  must still fit in an integer variable, so if the precision is 1000.0 the
   *  coordinate magnitudes must be less than +-2e6.
   *
   *  \param ptr        Pointer to coordinates to compress (length 3*ncoord)
   *  \param ncoord     Number of coordinate triplets in data
   *  \param precision  Scaling factor for lossy compression. If it is <=0,
   *                    the default value of 1000.0 is used.
   *  \param xfp        Handle to portably binary file
   *
   *  \return           Number of coordinate triplets written.
   *                    IMPORTANT: Check that this is equal to ncoord - if it is
   *                    negative, an error occured. This should not happen with
   *                     normal data, but if your coordinates are NaN or very
   *                    large (>1e6) it is not possible to use the compression.
   *
   *  \warning          The compression algorithm is not part of the XDR standard,
   *                    and very complicated, so you will need this xdrfile module
   *                    to read it later.
   */
  int
  xdrfile_compress_coord_float(float *     ptr,
                 int         ncoord,
                 float       precision,
                 XDRFILE *   xfp);
  /*! \brief Decompress coordiates from XDR file to array of floats
   *
   *  This routine will decompress three-dimensional coordinate data previously
   *  stored in an XDR file and store it in the specified array of floats.
   *
   *  The precision used during the earlier compression is read from the file
   *  and returned - you cannot adjust the accuracy at this stage.
   *
   *  \param ptr        Pointer to coordinates to compress (length>= 3*ncoord)
   *  \param ncoord     Max number of coordinate triplets to read on input, actual
   *                    number of coordinate triplets read on return. If this
   *                    is smaller than the number of coordinates in the frame an
   *                    error will occur.
   *  \param precision  The precision used in the previous compression will be
   *                    written to this variable on return.
   *  \param xfp        Handle to portably binary file
   *
   *  \return           Number of coordinate triplets read. If this is negative,
   *                    an error occured.
   *
   *  \warning          Since we cannot count on being able to set/get the
   *                    position of large files (>2Gb), it is not possible to
   *                    recover from errors by re-reading the frame if the
   *                    storage area you provided was too small. To avoid this
   *                    from happening, we recommend that you store the number of
   *                    coordinates triplet as an integer either in a header or
   *                    just before the compressed coordinate data, so you can
   *                    read it first and allocated enough memory.
   */
  int
  xdrfile_decompress_coord_float(float *     ptr,
                   int *     ncoord,
                   float *     precision,
                   XDRFILE *   xfp);
    int64_t xdr_tell(XDRFILE *xd);